# augeias

./: .flake8  .gitignore  .travis.yml  CONTRIBUTING.md  HISTORY.rst  MANIFEST.in  README.md  README.rst  development.ini  production.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: augeias_backend.yaml
augeias/: __init__.py  uri.py  views.py
augeias/collections/: __init__.py  model.py
augeias/scaffolds/: __init__.py
augeias/scaffolds/augeias_scaffold/: MANIFEST.in_tmpl  development.ini_tmpl  requirements-dev.txt_tmpl  requirements.txt_tmpl  setup.py_tmpl
augeias/scaffolds/augeias_scaffold/+package+/: __init__.py_tmpl
augeias/scaffolds/augeias_scaffold/+package+/collections/: __init__.py
augeias/stores/: CephStore.py  PairTreeFileSystemStore.py  StoreInterface.py  error.py
docs/: Makefile  api.rst  conf.py  glossary.rst  index.rst  install.rst  make.bat  service.rst
tests/: conf_test.ini  test_errors.py  test_functional.py  test_stores.py  test_uri.py  test_views.py
